<resources>
    <string name="app_name">ZenzaEats</string>
    <string name="add_phone_number_splash">Add your phone number to get started</string>
    <string name="separator">|</string>
    <string name="zenza_text_logo">Zenza</string>
    <string name="eats_text_logo">Eats</string>
    <string name="country_spinner_placeholder">Country</string>
    <string name="btn_splash_prompt_next_view">NEXT</string>
    <string name="tv_login_enter_your_mobile_number">Enter your mobile number</string>
    <string name="tv_login_disclaimer">If you continue, you may receive an SMS for verification. Message and data rates may apply.</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="tv_login_or">or</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_browse">Browse</string>
    <string name="bottom_nav_carts">Carts</string>
    <string name="bottom_nav_account">Account</string>

    <string-array name="countries_array">
        <item>+254</item>
        <item>+255</item>
        <item>+256</item>
    </string-array>
</resources>