<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_zenza_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/zenzaeats_splash"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_enter_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_phone_number_splash"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"/>
        <LinearLayout
            android:id="@+id/ll_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_border"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp">
            <Spinner
                android:id="@+id/sp_country_codes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
            />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zenza_text_logo"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eats_text_logo"
            android:textColor="#2faf49"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>
</RelativeLayout>